[package]
name = "ttx-eng"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
csv = "1.3.0"
rust_decimal = { version = "1.35.0" , features = ["serde-str"]}
rust_decimal_macros = "1.35.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"